--- a/csd_viewer_fix.ipynb
+++ b/csd_viewer_fix.ipynb
@@ -40,7 +40,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the full path to the EEG file (.bin, .npy, or .mat):  '/Volumes/kovi ssd/egyetem/7.felev-szakdoga/THUMB/patients/epi52_sleep/epi52_01_sleep_2_thumb_1.mat'\n"
+      "Enter the full path to the EEG file (.bin, .npy, or .mat):  '/Volumes/kovi ssd/egyetem/7.felev-szakdoga/THUMB/patients/pt5_oiti37/sleep/thumb1/file8percceltolva/pt_5oiti37_11_7_sleep_th1_4mins3.mat'\n"
      ]
     },
     {
@@ -49,14 +49,14 @@
      "text": [
       "Loaded data from key: 'lfpdata'\n",
       "Data type: float64\n",
-      "Original shape: (30000200, 23)\n",
-      "HDF5 detected. Transposing from (30000200, 23) to (23, 30000200)\n",
-      "File '/Volumes/kovi ssd/egyetem/7.felev-szakdoga/THUMB/patients/epi52_sleep/epi52_01_sleep_2_thumb_1.mat' loaded successfully!\n",
-      "Final data shape: (23, 30000200) (channels x samples)\n",
+      "Original shape: (480001, 23)\n",
+      "HDF5 detected. Transposing from (480001, 23) to (23, 480001)\n",
+      "File '/Volumes/kovi ssd/egyetem/7.felev-szakdoga/THUMB/patients/pt5_oiti37/sleep/thumb1/file8percceltolva/pt_5oiti37_11_7_sleep_th1_4mins3.mat' loaded successfully!\n",
+      "Final data shape: (23, 480001) (channels x samples)\n",
       "\n",
-      "Loaded data shape: (23, 30000200)\n",
+      "Loaded data shape: (23, 480001)\n",
       "Data type: float32\n",
-      "Cleaned file path: /Volumes/kovi ssd/egyetem/7.felev-szakdoga/THUMB/patients/epi52_sleep/epi52_01_sleep_2_thumb_1.mat\n"
+      "Cleaned file path: /Volumes/kovi ssd/egyetem/7.felev-szakdoga/THUMB/patients/pt5_oiti37/sleep/thumb1/file8percceltolva/pt_5oiti37_11_7_sleep_th1_4mins3.mat\n"
      ]
     }
    ],
@@ -377,9 +377,9 @@
     "\n",
     "t = loaded_data.shape[1]\n",
     "num_channels = loaded_data.shape[0]\n",
-    "fs = 20000 #recording freq\n",
-    "fs_resampled = 2000\n",
-    "fs_resampled_high = 5000\n",
+    "fs = 2000 #recording freq  pt1,5,6 2000 hz, others 20000\n",
+    "fs_resampled = 200 #200 or 2000\n",
+    "fs_resampled_high = 500 #500 or 5000\n",
     "resampled_data_high = loaded_data[:, ::4]\n",
     "resampled_data = loaded_data[:, ::10]\n",
     "resamp_data = preprocess_data(resampled_data, fs_resampled)\n",
@@ -401,7 +401,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4d70db0ba97496ab2dc09eac19d9ded",
+       "model_id": "b5b23b672bd54f3c8402ba6d511fcdf6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -415,7 +415,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a753167cdc4846fd88cb7619e6cba057",
+       "model_id": "52394422596e4f0c9bdd7eae3b5ac9bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -429,7 +429,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4533421727544651b5cc2e252614b87e",
+       "model_id": "02582a55ea1a472286ed7974e7f090fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -443,7 +443,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03cd20cdbd9149b5886d870154ab7dc9",
+       "model_id": "1219f7bbf2af435eb38efda9d9960d25",
        "version_major": 2,
        "version_minor": 0
       },
@@ -457,7 +457,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87dd93d89c094acdaf9d4bf3dd09f790",
+       "model_id": "22dc811f7e474f3487d833b81ab512f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -471,7 +471,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e2ebedb61104be68fbd9d3c4f53fb2a",
+       "model_id": "d7da69ebbb624aa9a513bfd354bb10c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -485,7 +485,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "444c7a593129434fa337a94c27af8c73",
+       "model_id": "c84dd0edea184582900afd8f758b43d4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -499,7 +499,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "390d8300e07244b4af548a2ea0150dc1",
+       "model_id": "f51fbaa1b421493ab1cc715b7ceecee5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -513,7 +513,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64e304789dd447cdbb7b2979a320929d",
+       "model_id": "a024ff02601e416cbd0cb427801a6801",
        "version_major": 2,
        "version_minor": 0
       },
@@ -527,7 +527,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e796784fdd04d9e9dcf6a4cd4ec7549",
+       "model_id": "f960a1328f18466e9aae03b60189883a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -541,7 +541,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0f28762c8ff4dd6902327b542abb8a4",
+       "model_id": "57aebaa553654687b2e37e401b45984f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -555,7 +555,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b17c8bb40de466488d6cd69176f3510",
+       "model_id": "86d63e1ab9e9451caa1660bf390112e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -569,7 +569,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bb2694e089840ed8b015ee769168e25",
+       "model_id": "d5294d75e082482db564728fb734276d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -584,7 +584,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-24 19:19:43.637 python3.13[84592:26391550] +[IMKClient subclass]: chose IMKClient_Modern\n"
+      "2025-12-02 11:13:39.094 python3.13[74864:31405318] +[IMKClient subclass]: chose IMKClient_Modern\n"
      ]
     }
    ],
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "22ba5ad8-f220-467e-9513-8931288c499c",
    "metadata": {},
    "outputs": [
@@ -987,14 +987,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the channels to plot (comma-separated or interval):  4-10\n",
-      "Select the target channel:  6\n"
+      "Enter the channels to plot (comma-separated or interval):  5-9\n",
+      "Select the target channel:  7\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4495d3d44822418a9cd175d51d10bbb0",
+       "model_id": "b39884d448f94d548cfb5814e071aa06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1008,12 +1008,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6d80a43da504c5f883403679659e002",
+       "model_id": "192a36d86ad54f5aa1d2442b57f4aa46",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Text(value='4-10', description='Channels to Plot'), Text(value='6', description='Target …"
+       "interactive(children=(Text(value='5-9', description='Channels to Plot'), Text(value='7', description='Target C…"
       ]
      },
      "metadata": {},
@@ -1022,7 +1022,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c41d2aea3104d5493fa4dc059c894ce",
+       "model_id": "6b78b05d3add4e709b453f3c9b672282",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1036,7 +1036,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88062e96e1f048bc855207fdb887641a",
+       "model_id": "c552cd53a8ca401fa349f53f4de235d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1050,7 +1050,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "313fdbfca39c45a9b60cffea138d753c",
+       "model_id": "71a717800a7a44b1bcafaa4a55d73a73",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1064,7 +1064,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "accd06f37894408f85482f8b8cb33b0a",
+       "model_id": "3f1b5b7accf14383b802de062c5e2b08",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1616,19 +1616,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "1293e89d-1f55-4fe4-9add-f0ace25ae06c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94c0317d86104ff6972a8f680d238806",
+       "model_id": "90f28ffd730b4403a5fc11a4f1eafb01",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Text(value='6', description='Target Channel:', placeholder='Target Channel')"
+       "Text(value='7', description='Target Channel:', placeholder='Target Channel')"
       ]
      },
      "metadata": {},
@@ -1637,7 +1637,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7791617ec34141018ef02faeac550f90",
+       "model_id": "7ce30b418da24c8e90c4e34ff55d501a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1651,7 +1651,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54c4fd5cee4f44f0b74607d0eb0b7b98",
+       "model_id": "6e621b15ee824f7d9347626e9ebdaa48",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1665,7 +1665,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e16a2c82eef4a6991f878cd2fb655a6",
+       "model_id": "cd47d19c541b48b694ce6dd42c6329d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1679,7 +1679,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b447e09c486c46efaa9e1a3e595952e7",
+       "model_id": "f8b7b08793da47a5bd31a5a8dfa02ca4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1693,7 +1693,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0246179237ec4fd1822492aff62f526d",
+       "model_id": "51f8e3205dd94482a7b9d085023c1cda",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1707,7 +1707,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d04a9df00a644c2b76387ea944b25b0",
+       "model_id": "183929bb56574225af0dfca748e766f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1721,7 +1721,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59c4792a7e1e4984954882d26d13de2f",
+       "model_id": "63f6f067bd95460a98ba326648febbb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1735,7 +1735,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4ee2500ac75408eb7e2d180b50e9667",
+       "model_id": "20f622b571654c389ab1297ee3490d80",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2068,14 +2068,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "9a82f31a-04ff-4ccf-9a51-45c16c4b4381",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79199d1f8a114062a08518b57f9b4126",
+       "model_id": "0e586078806f479199d70a6625e18002",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2090,14 +2090,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waveforms min/max: -0.2875447633280092 0.06181717994215024\n",
-      "Heatmap min/max: -0.2875447633280092 0.2570548262997873\n"
+      "Waveforms min/max: -101.18110253594759 20.897705820161033\n",
+      "Heatmap min/max: -262.9727100867856 199.19777175499775\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "926509fdf56a4fabac19fa0d624ad0aa",
+       "model_id": "ca66dae9b5a049d1a0e40b83a79e92ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2111,12 +2111,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6fa08e2afe44a75aca514962378c0d8",
+       "model_id": "23b5678a7ffd41cea65f50dd72781cb5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatRangeSlider(value=(-0.2875447633280092, 0.2875447633280092), continuous_update=False, description='Amplit…"
+       "FloatRangeSlider(value=(-262.9727100867856, 262.9727100867856), continuous_update=False, description='Amplitud…"
       ]
      },
      "metadata": {},
@@ -2127,16 +2127,16 @@
      "output_type": "stream",
      "text": [
       "Results saved to 'lfp_analysis.csv' and 'lfp_max_min_peaks.csv'.\n",
-      "abs_norm_snippets shape: (423, 23, 1200)\n",
-      "max_peaks shape: (423, 7)\n",
-      "min_peaks shape: (423, 7)\n"
+      "abs_norm_snippets shape: (156, 23, 120)\n",
+      "max_peaks shape: (156, 5)\n",
+      "min_peaks shape: (156, 5)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-24 20:35:57.494 python3.13[84592:26391550] The class 'NSSavePanel' overrides the method identifier.  This method is implemented by class 'NSWindow'\n"
+      "2025-12-02 11:16:51.884 python3.13[74864:31405318] The class 'NSSavePanel' overrides the method identifier.  This method is implemented by class 'NSWindow'\n"
      ]
     }
    ],
@@ -2254,9 +2254,9 @@
     "                channels_to_plot.extend(range(start-1, end))  # Convert to 0-based index\n",
     "            else:\n",
     "                channels_to_plot.append(int(part) - 1)  # Convert to 0-based index\n",
-    "\n",
+    "######\n",
     "    # Step A: Filter the data\n",
-    "    filtered_data = butter_bandpass_filter(resampled_data, 1, 30, fs_resampled)\n",
+    "    filtered_data = butter_bandpass_filter(resampled_data, 1, 30, fs_resampled) #change every time\n",
     "    hamming_filtered_data = apply_hamming_filter(filtered_data, fs_resampled)\n",
     "\n",
     "    # Step B: Extract snippets\n",
@@ -2378,14 +2378,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "746ed61b-18ee-4183-9ebd-a5056699e993",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "121984cd0fbf496abee2a7ad7c76c7ed",
+       "model_id": "fa6283190070497dbeffe13dd83ab435",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2400,14 +2400,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waveforms min/max: -0.06174572981701603 0.06025774374594331\n",
-      "Heatmap min/max: -0.4981603936533857 0.5139616195482103\n"
+      "Waveforms min/max: -51.20050426160457 53.73782641031235\n",
+      "Heatmap min/max: -298.5409334163913 418.78524765216986\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "825a5744eee54ad5820fef0f7102629e",
+       "model_id": "2db1a219e18a4bb68eb4aaef50f8d099",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2421,12 +2421,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9e16cb496cc4e59b265d92c5743483f",
+       "model_id": "9d14830160af4ab4862f76543a36b905",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatRangeSlider(value=(-0.5139616195482103, 0.5139616195482103), continuous_update=False, description='Amplit…"
+       "FloatRangeSlider(value=(-418.78524765216986, 418.78524765216986), continuous_update=False, description='Amplit…"
       ]
      },
      "metadata": {},
@@ -2494,7 +2494,7 @@
     "        im = ax.imshow(\n",
     "            selected_channels,\n",
     "            aspect=\"auto\",\n",
-    "            cmap=\"jet\",\n",
+    "            cmap=\"jet_r\",\n",
     "            extent=[-300, 300, channel_range[1], channel_range[0]],\n",
     "            vmin=vmin,\n",
     "            vmax=vmax,\n",
@@ -2557,8 +2557,9 @@
     "                channels_to_plot.extend(range(start-1, end))  # Convert to 0-based index\n",
     "            else:\n",
     "                channels_to_plot.append(int(part) - 1)  # Convert to 0-based index\n",
-    "\n",
-    "    bandpass_data = butter_bandpass_filter(resampled_data, 1, 30, fs_resampled)\n",
+    "#######\n",
+    "#######\n",
+    "    bandpass_data = butter_bandpass_filter(resampled_data, 1, 30, fs_resampled) #rewrite\n",
     "    hamming_filtered_data = apply_hamming_filter(bandpass_data, fs_resampled)\n",
     "    filtered_data = hamming_filtered_data\n",
     "\n",
@@ -2650,14 +2651,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "c93b069b-22a7-4a82-b844-a799d8ba0e76",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac783965e3374558b5ee00df45d7db79",
+       "model_id": "2cd6f7ea6ad74fabb42d45fdb4bb25d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2671,7 +2672,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3957fcd61c24a768fe0ede9a9da1cc5",
+       "model_id": "290b3afaf7684a158f14220b0e709b43",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2685,12 +2686,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fee142016a447e781758b22818811cf",
+       "model_id": "c3b86a2eaf7b424693949a46b50a9caa",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatRangeSlider(value=(-0.0004299720597861914, 0.0004299720597861914), continuous_update=False, description='…"
+       "FloatRangeSlider(value=(-0.0006886036409035537, 0.0006886036409035537), continuous_update=False, description='…"
       ]
      },
      "metadata": {},
@@ -2945,7 +2946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aacc22e4-3950-4876-bde3-df5e2184e0ab",
+   "id": "f6b0e2cb-9004-4fdf-9855-1bb8e83d654c",
    "metadata": {},
    "outputs": [],
    "source": []
