--- a/csd_viewer_fix.ipynb
+++ b/csd_viewer_fix.ipynb
@@ -40,7 +40,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the full path to the EEG file (.bin, .npy, or .mat):  '/Volumes/kovi ssd/egyetem/7.felev-szakdoga/THUMB/patients/pt5_oiti37/sleep/thumb1/file8percceltolva/pt_5oiti37_11_7_sleep_th1_4mins3.mat'\n"
+      "Enter the full path to the EEG file (.bin, .npy, or .mat):  '/Volumes/kovi ssd/egyetem/7.felev-szakdoga/THUMB/patients/pt1_oiti39/pt1_oiti39_sleep/thumb2/pt1_oiti39_sleepth2_4mins1.mat'\n"
      ]
     },
     {
@@ -49,14 +49,14 @@
      "text": [
       "Loaded data from key: 'lfpdata'\n",
       "Data type: float64\n",
-      "Original shape: (480001, 23)\n",
-      "HDF5 detected. Transposing from (480001, 23) to (23, 480001)\n",
-      "File '/Volumes/kovi ssd/egyetem/7.felev-szakdoga/THUMB/patients/pt5_oiti37/sleep/thumb1/file8percceltolva/pt_5oiti37_11_7_sleep_th1_4mins3.mat' loaded successfully!\n",
-      "Final data shape: (23, 480001) (channels x samples)\n",
+      "Original shape: (480000, 23)\n",
+      "HDF5 detected. Transposing from (480000, 23) to (23, 480000)\n",
+      "File '/Volumes/kovi ssd/egyetem/7.felev-szakdoga/THUMB/patients/pt1_oiti39/pt1_oiti39_sleep/thumb2/pt1_oiti39_sleepth2_4mins1.mat' loaded successfully!\n",
+      "Final data shape: (23, 480000) (channels x samples)\n",
       "\n",
-      "Loaded data shape: (23, 480001)\n",
+      "Loaded data shape: (23, 480000)\n",
       "Data type: float32\n",
-      "Cleaned file path: /Volumes/kovi ssd/egyetem/7.felev-szakdoga/THUMB/patients/pt5_oiti37/sleep/thumb1/file8percceltolva/pt_5oiti37_11_7_sleep_th1_4mins3.mat\n"
+      "Cleaned file path: /Volumes/kovi ssd/egyetem/7.felev-szakdoga/THUMB/patients/pt1_oiti39/pt1_oiti39_sleep/thumb2/pt1_oiti39_sleepth2_4mins1.mat\n"
      ]
     }
    ],
@@ -401,7 +401,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5b23b672bd54f3c8402ba6d511fcdf6",
+       "model_id": "7085540dbaaa4a55b8356d97be2e9b12",
        "version_major": 2,
        "version_minor": 0
       },
@@ -415,7 +415,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52394422596e4f0c9bdd7eae3b5ac9bd",
+       "model_id": "946dca951b654af489ba832b5941816c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -429,7 +429,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02582a55ea1a472286ed7974e7f090fc",
+       "model_id": "362ba98dd5304131bd81a561bd037dea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -443,7 +443,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1219f7bbf2af435eb38efda9d9960d25",
+       "model_id": "8df4e795229c41f48d807e399574a425",
        "version_major": 2,
        "version_minor": 0
       },
@@ -457,7 +457,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22dc811f7e474f3487d833b81ab512f3",
+       "model_id": "086318000f054386bfb99155c9949b32",
        "version_major": 2,
        "version_minor": 0
       },
@@ -471,7 +471,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7da69ebbb624aa9a513bfd354bb10c9",
+       "model_id": "86d2cfb5d2964d13972e09e2293d8970",
        "version_major": 2,
        "version_minor": 0
       },
@@ -485,7 +485,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c84dd0edea184582900afd8f758b43d4",
+       "model_id": "39a36b467d004e629e6ef3941371b41e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -499,7 +499,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f51fbaa1b421493ab1cc715b7ceecee5",
+       "model_id": "296ea3a6fdbe41c682a4dd5be497eb65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -513,7 +513,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a024ff02601e416cbd0cb427801a6801",
+       "model_id": "2836e871dfa041b6b8c7118005d89131",
        "version_major": 2,
        "version_minor": 0
       },
@@ -527,7 +527,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f960a1328f18466e9aae03b60189883a",
+       "model_id": "a5ffa472ea4c43fcb9e74d7b9bc21c91",
        "version_major": 2,
        "version_minor": 0
       },
@@ -541,7 +541,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57aebaa553654687b2e37e401b45984f",
+       "model_id": "1c34820f70144b49b80c6eaa4d993ba3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -555,7 +555,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86d63e1ab9e9451caa1660bf390112e1",
+       "model_id": "31f8e7d026ce4e18a6c58ace088235fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -569,7 +569,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5294d75e082482db564728fb734276d",
+       "model_id": "468d1c8e75f94fb7b45a5fe27a328102",
        "version_major": 2,
        "version_minor": 0
       },
@@ -584,7 +584,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-02 11:13:39.094 python3.13[74864:31405318] +[IMKClient subclass]: chose IMKClient_Modern\n"
+      "2025-12-02 18:58:29.922 python3.13[78888:31644208] +[IMKClient subclass]: chose IMKClient_Modern\n"
      ]
     }
    ],
@@ -994,7 +994,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b39884d448f94d548cfb5814e071aa06",
+       "model_id": "5ad3226e970549ab945a26eb293ea144",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1008,7 +1008,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "192a36d86ad54f5aa1d2442b57f4aa46",
+       "model_id": "abaa36d1e6634ad6a5dbdb00544e9438",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1022,7 +1022,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b78b05d3add4e709b453f3c9b672282",
+       "model_id": "22cd1001489541ae9c9d645f182efd37",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1036,7 +1036,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c552cd53a8ca401fa349f53f4de235d7",
+       "model_id": "556f8dfcdfa1495f86c46f8f412a9e3f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1050,7 +1050,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71a717800a7a44b1bcafaa4a55d73a73",
+       "model_id": "0ea1e7bb4d05448f8a6970022e34a876",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1064,7 +1064,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f1b5b7accf14383b802de062c5e2b08",
+       "model_id": "944457f64b934e5ea9b339412c9b90cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1616,14 +1616,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "1293e89d-1f55-4fe4-9add-f0ace25ae06c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90f28ffd730b4403a5fc11a4f1eafb01",
+       "model_id": "468f5eef219b44589d2f5e9b2dc99653",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1637,7 +1637,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ce30b418da24c8e90c4e34ff55d501a",
+       "model_id": "06100e93c48f495dbea140bcbe7e6fd2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1651,7 +1651,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e621b15ee824f7d9347626e9ebdaa48",
+       "model_id": "b458aef7462c495299b51543a03305b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1665,7 +1665,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd47d19c541b48b694ce6dd42c6329d1",
+       "model_id": "5a7604c844ef4de8b316d11571a0c55e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1679,7 +1679,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8b7b08793da47a5bd31a5a8dfa02ca4",
+       "model_id": "5b2c6c8a4b70493892b9bdf6f44a28c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1693,7 +1693,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51f8e3205dd94482a7b9d085023c1cda",
+       "model_id": "7def134c5a17474dbd46bdd711314d7a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1707,7 +1707,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "183929bb56574225af0dfca748e766f2",
+       "model_id": "7d7d4e9589a24a95be46043114d2fe19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1721,7 +1721,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63f6f067bd95460a98ba326648febbb9",
+       "model_id": "f738d9344ed74d3daca44947285da345",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1735,7 +1735,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20f622b571654c389ab1297ee3490d80",
+       "model_id": "9e77385c209d430d94fb93d79956dde4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2068,14 +2068,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "9a82f31a-04ff-4ccf-9a51-45c16c4b4381",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e586078806f479199d70a6625e18002",
+       "model_id": "daaa752afa8e439099cd4705316a6dd3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2090,14 +2090,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waveforms min/max: -101.18110253594759 20.897705820161033\n",
-      "Heatmap min/max: -262.9727100867856 199.19777175499775\n"
+      "Waveforms min/max: -24.68419763673662 2.2005001142884306\n",
+      "Heatmap min/max: -43.37248031177719 9.005061546112014\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca66dae9b5a049d1a0e40b83a79e92ca",
+       "model_id": "c405982015c0420996a5e61b4fdccdd7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2111,12 +2111,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23b5678a7ffd41cea65f50dd72781cb5",
+       "model_id": "636e84c9e3f94605bf0c22083861f218",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatRangeSlider(value=(-262.9727100867856, 262.9727100867856), continuous_update=False, description='Amplitud…"
+       "FloatRangeSlider(value=(-43.37248031177719, 43.37248031177719), continuous_update=False, description='Amplitud…"
       ]
      },
      "metadata": {},
@@ -2127,16 +2127,9 @@
      "output_type": "stream",
      "text": [
       "Results saved to 'lfp_analysis.csv' and 'lfp_max_min_peaks.csv'.\n",
-      "abs_norm_snippets shape: (156, 23, 120)\n",
-      "max_peaks shape: (156, 5)\n",
-      "min_peaks shape: (156, 5)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-12-02 11:16:51.884 python3.13[74864:31405318] The class 'NSSavePanel' overrides the method identifier.  This method is implemented by class 'NSWindow'\n"
+      "abs_norm_snippets shape: (127, 23, 120)\n",
+      "max_peaks shape: (127, 5)\n",
+      "min_peaks shape: (127, 5)\n"
      ]
     }
    ],
@@ -2254,7 +2247,7 @@
     "                channels_to_plot.extend(range(start-1, end))  # Convert to 0-based index\n",
     "            else:\n",
     "                channels_to_plot.append(int(part) - 1)  # Convert to 0-based index\n",
-    "######\n",
+    "###### change to diff lfp freq band depending on previous work\n",
     "    # Step A: Filter the data\n",
     "    filtered_data = butter_bandpass_filter(resampled_data, 1, 30, fs_resampled) #change every time\n",
     "    hamming_filtered_data = apply_hamming_filter(filtered_data, fs_resampled)\n",
@@ -2378,14 +2371,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "746ed61b-18ee-4183-9ebd-a5056699e993",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa6283190070497dbeffe13dd83ab435",
+       "model_id": "f44481d321864e7a977bb522a120f522",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2400,14 +2393,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waveforms min/max: -51.20050426160457 53.73782641031235\n",
-      "Heatmap min/max: -298.5409334163913 418.78524765216986\n"
+      "Waveforms min/max: -4.10033020658038 6.805558085209683\n",
+      "Heatmap min/max: -13.091675251783489 12.367431918595113\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2db1a219e18a4bb68eb4aaef50f8d099",
+       "model_id": "a80662afd4a342fbb768c786cfca56d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2421,12 +2414,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d14830160af4ab4862f76543a36b905",
+       "model_id": "37c4f3c6d34f478f93f95684bb68626b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatRangeSlider(value=(-418.78524765216986, 418.78524765216986), continuous_update=False, description='Amplit…"
+       "FloatRangeSlider(value=(-13.091675251783489, 13.091675251783489), continuous_update=False, description='Amplit…"
       ]
      },
      "metadata": {},
@@ -2557,8 +2550,8 @@
     "                channels_to_plot.extend(range(start-1, end))  # Convert to 0-based index\n",
     "            else:\n",
     "                channels_to_plot.append(int(part) - 1)  # Convert to 0-based index\n",
-    "#######\n",
-    "#######\n",
+    "                \n",
+    "###### change to diff lfp freq band depending on previous work\n",
     "    bandpass_data = butter_bandpass_filter(resampled_data, 1, 30, fs_resampled) #rewrite\n",
     "    hamming_filtered_data = apply_hamming_filter(bandpass_data, fs_resampled)\n",
     "    filtered_data = hamming_filtered_data\n",
